# GameLoop

./: CMakeLists.txt  README
include/: application.hpp  battleScene.hpp  deltaTimeCalc.hpp  gameScene.hpp  iGameManager.hpp  iSceneManager.hpp  splashScreenScene.hpp  window.hpp
src/: application.cpp  battleScene.cpp  gameScene.cpp  main.cpp  splashScreenScene.cpp  window.cpp
